--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -19,15 +19,7 @@ $primary: $olivedrab;
 // font
 $family-primary: "Alata", "Kosugi Maru";
 
-// Import only what you need from Bulma
 @import "../../node_modules/bulma/bulma.sass";
 
-// @import "../../node_modules/bulma/sass/utilities/_all.sass";
-// @import "../../node_modules/bulma/sass/base/_all.sass";
-// @import "../../node_modules/bulma/sass/elements/button.sass";
-// @import "../../node_modules/bulma/sass/elements/container.sass";
-// @import "../../node_modules/bulma/sass/elements/title.sass";
-// @import "../../node_modules/bulma/sass/form/_all.sass";
-// @import "../../node_modules/bulma/sass/components/navbar.sass";
-// @import "../../node_modules/bulma/sass/layout/hero.sass";
-// @import "../../node_modules/bulma/sass/layout/section.sass";
+@import "../../node_modules/bulma-extensions/src/sass/index.sass";
+@import "../../node_modules/bulma-extensions/bulma-tooltip/src/sass/index.sass";
